# lab_00_solution

./: .gitignore  README.md
cpp/: CMakeLists.txt  conanfile.txt  main.cpp
py/: README.md  main.py
